# openai-tia-prep

./: .dockerignore  .gitignore  README.md
.claude/: settings.json
osai-prep-studio/: README.md  (+26 more)
osai-prep-studio/spine/: Makefile  README.md  conftest.py  pyproject.toml  requirements-llm.txt  requirements.txt
osai-prep-studio/spine/capstone/: incident_log.json
osai-prep-studio/spine/deploy/: Dockerfile.grader  Dockerfile.labtarget  Dockerfile.web  README.md  docker-compose.beta.yml  docker-compose.llm.yml  docker-compose.ollama.yml  docker-compose.yml
osai-prep-studio/spine/gold/: goldset.json
osai-prep-studio/spine/labs/: L01.json  L02.json  L03.json  L04.json  L05.json  L06.json  L07.json  L09.json  L10.json  L11.json  L12.json  L13.json  L14.json  L15.json  L16.json
osai-prep-studio/spine/osai_spine/: __init__.py  api.py  audit.py  auth.py  capstone.py  cli.py  engine.py  exam.py  flags.py  goldset.py  labserver.py  labtarget.py  llm.py  manifest.py  progress.py  report.py  service.py  staleness.py  taxonomy.py  tutor.py  validator.py
osai-prep-studio/spine/osai_spine/static/: index.html
osai-prep-studio/spine/tests/: test_api.py  test_api_auth.py  test_api_cookie.py  test_audit.py  test_auth.py  test_badges.py  test_capstone.py  test_end_to_end_journey.py  test_end_to_end_loop.py  test_exam.py  test_flags.py  test_flashcards.py  test_goldset.py  test_labs_l02_l11.py  test_labs_l10_l13_l14.py  test_labtarget_ollama.py  test_llm.py  test_manifests.py  test_progress.py  test_report.py  test_service.py  test_taxonomy.py  test_tutor.py  test_validator.py
(+32 files in other folders)
